# Agentic_ai_complete_course

./: .env  main.py  pyproject.toml
Langchain-Course/: 1-langchainintro.ipynb  2-langcahin_integration .ipynb
